--- a/app/src/main/res/layout/activity_lyrics.xml
+++ b/app/src/main/res/layout/activity_lyrics.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/tools"
     android:orientation="vertical">
 
 
@@ -15,160 +16,186 @@
         app:cardUseCompatPadding="true">
 
         <com.google.android.gms.ads.AdView
-            android:id="@+id/adView"
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/tamil_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+        </com.google.android.gms.ads.AdView>
 
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="3dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:cardUseCompatPadding="true">
-     <!-- <in.beyonitysoftwares.besttamilsongs.views.LyricView
-                    android:id="@+id/tamil_lyrics"
+        android:layout_height="match_parent">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                app:cardUseCompatPadding="true">
+                <!-- <in.beyonitysoftwares.besttamilsongs.views.LyricView
+                               android:id="@+id/tamil_lyrics"
+                               android:layout_width="match_parent"
+                               android:layout_height="match_parent"
+                               app:fadeInFadeOut="true"
+                               app:highlightColor="@color/md_white_1000"
+                               app:hint="No Lyrics"
+                               app:hintColor="@color/md_grey_400"
+                               app:lineSpace="15dp"
+                               app:textAlign="left"
+                               app:textSize="18sp" />-->
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:fadeInFadeOut="true"
-                    app:highlightColor="@color/md_white_1000"
-                    app:hint="No Lyrics"
-                    app:hintColor="@color/md_grey_400"
-                    app:lineSpace="15dp"
-                    app:textAlign="left"
-                    app:textSize="18sp" />-->
+                    android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:background="@color/md_white_1000"
+                        android:orientation="horizontal">
 
-            <LinearLayout
+                        <!--   <TextView
+                               android:id="@+id/textView"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_gravity="center"
+                               android:layout_weight="1"
+                               android:fontFamily="@font/convergence"
+                               android:gravity="center"
+                               android:text="@string/share"
+                               android:textAlignment="center"
+                               android:textStyle="bold" />
+
+                           <ImageButton
+                               android:id="@+id/imageButton"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_gravity="right"
+                               android:layout_weight="1"
+                               android:background="@android:color/transparent"
+                               app:srcCompat="@drawable/ic_share_white_24dp" />-->
+
+                        <TextView
+                            android:id="@+id/tamilone"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/convergence"
+                            android:text="@string/lyrics"
+                            android:textAlignment="center"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:background="@color/md_white_1000"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                app:cardUseCompatPadding="true">
 
-                <TextView
-                    android:id="@+id/textView"
+                <com.google.android.gms.ads.AdView
+                    xmlns:ads="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/tamil_middle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/convergence"
-                    android:gravity="center"
-                    android:text="@string/share"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
-
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/ic_share_white_24dp" />
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/convergence"
-                    android:text="@string/lyrics"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentBottom="true"
+                    ads:adSize="BANNER"
+                    ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+                </com.google.android.gms.ads.AdView>
+            </android.support.v7.widget.CardView>
 
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:cardUseCompatPadding="true">
-
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="3dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:cardUseCompatPadding="true">
-
-        <!--  <in.beyonitysoftwares.besttamilsongs.views.LyricView
-              android:id="@+id/tamil_lyrics2"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              app:fadeInFadeOut="true"
-              app:highlightColor="@color/md_white_1000"
-              app:hint="No Lyrics"
-              app:hintColor="@color/md_grey_400"
-              app:lineSpace="15dp"
-              app:textAlign="left"
-              app:textSize="18sp" />-->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/md_white_1000"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                app:cardUseCompatPadding="true">
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/convergence"
-                    android:text="@string/share"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
+                <!--  <in.beyonitysoftwares.besttamilsongs.views.LyricView
+                      android:id="@+id/tamil_lyrics2"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      app:fadeInFadeOut="true"
+                      app:highlightColor="@color/md_white_1000"
+                      app:hint="No Lyrics"
+                      app:hintColor="@color/md_grey_400"
+                      app:lineSpace="15dp"
+                      app:textAlign="left"
+                      app:textSize="18sp" />-->
 
-                <ImageButton
-                    android:id="@+id/imageButton2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/ic_share_white_24dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/convergence"
-                    android:text="@string/lyrics"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/md_white_1000"
+                        android:orientation="horizontal">
 
+                        <!-- <TextView
+                             android:id="@+id/textView3"
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
+                             android:layout_gravity="center"
+                             android:layout_weight="1"
+                             android:fontFamily="@font/convergence"
+                             android:text="@string/share"
+                             android:textAlignment="center"
+                             android:textStyle="bold" />
+
+                         <ImageButton
+                             android:id="@+id/imageButton2"
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
+                             android:layout_weight="1"
+                             android:background="@android:color/transparent"
+                             app:srcCompat="@drawable/ic_share_white_24dp" />-->
+
+                        <TextView
+                            android:id="@+id/tamiltwo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/convergence"
+                            android:text="@string/lyrics"
+                            android:textAlignment="center"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+
+    </ScrollView>
+
 
 
   </LinearLayout>
