--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,7 +26,7 @@
     <!--Grey 50, #FAFAFA, Opacity  100%-->
     <color name="ate_switch_thumb_normal_light">#FFFAFAFA</color>
     <!--Grey 400, #BDBDBD, Opacity  100%-->
-    <color name="ate_switch_thumb_disabled_light">#FFBDBDBD</color>
+    <color name="ate_switch_thumb_disabled_light">#bdbdbd</color>
     <!---->
     <color name="ate_navigation_drawer_selected_light">#E8E8E8</color>
 
