--- a/app/src/main/res/layout/activity_lyrics_eng.xml
+++ b/app/src/main/res/layout/activity_lyrics_eng.xml
@@ -18,13 +18,11 @@
         <com.google.android.gms.ads.AdView
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/english_top"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
             ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+            ads:adUnitId="ca-app-pub-7987343674758455/7851209441">
         </com.google.android.gms.ads.AdView>
 
     </android.support.v7.widget.CardView>
@@ -119,13 +117,12 @@
                 <com.google.android.gms.ads.AdView
                     xmlns:ads="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/english_middle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_centerHorizontal="true"
-                    android:layout_alignParentBottom="true"
+
                     ads:adSize="BANNER"
-                    ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+                    ads:adUnitId="ca-app-pub-7987343674758455/6346556088">
                 </com.google.android.gms.ads.AdView>
 
             </android.support.v7.widget.CardView>
