--- a/app/src/main/res/layout/activity_lyrics.xml
+++ b/app/src/main/res/layout/activity_lyrics.xml
@@ -24,7 +24,7 @@
             android:layout_gravity="center"
             android:layout_marginBottom="2dp"
             android:layout_marginTop="2dp"
-            ads:adSize="BANNER"
+            ads:adSize="SMARTBANNER"
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
 
     </android.support.v7.widget.CardView>
@@ -81,7 +81,6 @@
                                android:text="@string/share"
                                android:textAlignment="center"
                                android:textStyle="bold" />
-
                            <ImageButton
                                android:id="@+id/imageButton"
                                android:layout_width="wrap_content"
@@ -171,7 +170,6 @@
                              android:text="@string/share"
                              android:textAlignment="center"
                              android:textStyle="bold" />
-
                          <ImageButton
                              android:id="@+id/imageButton2"
                              android:layout_width="wrap_content"
@@ -200,4 +198,4 @@
 
 
 
-  </LinearLayout>
+</LinearLayout>
